# WinFont

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  make.bat  resource.cpp  tools.cmake
.github/workflows/: cmake.yml
Source/: font.cpp  font.h  freetype.cpp  freetype.h  system.cpp  system.h
Test/: GLContext.cpp  GLContext.h  main.cpp
